--- a/public/.htaccess
+++ b/public/.htaccess
@@ -8,7 +8,7 @@
     RewriteCond %{HTTP:X-Forwarded-Proto} =http [OR]
     RewriteCond %{HTTP:X-Forwarded-Proto} =""
     RewriteCond %{HTTPS} != On
-    RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+    RewriteRule ^ https:://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
 
 
