--- a/public/.htaccess
+++ b/public/.htaccess
@@ -7,7 +7,7 @@
 
     RewriteCond %{HTTP:X-Forwarded-Proto} =http [OR]
     RewriteCond %{HTTP:X-Forwarded-Proto} =""
-    RewriteCond %{HTTPS} != On
+    RewriteCond %{HTTPS} !=on
     RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
 
